[project]
name = "multiagent-debate-dag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.5.0",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "typing-extensions>=4.14.0",
]
